# type-down

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  justfile  readme.md  spec.tyd  test.tyd  type_down.par
.github/workflows/: docs.yml  docsrs.yml
crates/html-writer/: Cargo.toml
crates/html-writer/src/: document.rs  lib.rs  stack.rs
crates/html-writer/src/element/: dynamic.rs  mod.rs  tags.rs
crates/tyd-core/: Cargo.toml
crates/tyd-core/src/: doc.rs  id.rs  kind.rs  lib.rs  meta.rs  node.rs  visit.rs
crates/tyd-core/src/tree/: block.rs  code.rs  inline.rs  mod.rs
crates/tyd-doc/: Cargo.toml
crates/tyd-doc/src/: doc.rs  handle.rs  id.rs  kind.rs  lib.rs  meta.rs  node.rs  visit.rs
crates/tyd-doc/src/tree/: block.rs  code.rs  mod.rs
crates/tyd-eval/: Cargo.toml
crates/tyd-eval/src/: attr.rs  builtin.rs  engine.rs  error.rs  hir.rs  ir.rs  lib.rs  plugin.rs  render.rs  scope.rs  stack.rs  tracer.rs  ty.rs  value.rs  world.rs
crates/tyd-eval/src/builtin/: bind.rs  figure.rs  highlight.rs  hrule.rs  image.rs  linebreak.rs  list.rs  map.rs  mod.rs  smallcaps.rs  underline.rs
crates/tyd-eval/src/eval/: context.rs  engine.rs  machine.rs  mod.rs  scope.rs  tracer.rs
crates/tyd-eval/src/foundations/: args.rs  func.rs  mod.rs  signature.rs
crates/tyd-eval/src/plugin/: func.rs  mod.rs  signature.rs
crates/tyd-eval/src/render/: docx.rs  html.rs  mod.rs  pandoc.rs  pdf.rs
crates/tyd-eval/src/value/: cast.rs  mod.rs
crates/tyd-html/: Cargo.toml
crates/tyd-html/src/: builder.rs  document.rs  lib.rs  stack.rs
crates/tyd-html/src/element/: dynamic.rs  mod.rs  render.rs
crates/tyd-language-server/: Cargo.toml
crates/tyd-language-server/src/: backend.rs  main.rs  semantic.rs  token.rs  tree.rs
crates/tyd-language-server/src/syntax/: kind.rs  mod.rs  node.rs  token.rs
crates/tyd-language-server/src/syntax/node/: kind.rs  mod.rs
crates/tyd-language-server/src/syntax/token/: kind.rs  mod.rs
crates/tyd-pandoc/: Cargo.toml
crates/tyd-pandoc/src/: attr.rs  builder.rs  builtin.rs  docx.rs  engine.rs  error.rs  html.rs  lib.rs  pandoc.rs  pdf.rs  visitor.rs
crates/tyd-pandoc/src/builtin/: figure.rs  highlight.rs  hrule.rs  image.rs  linebreak.rs  mod.rs  smallcaps.rs  underline.rs
crates/tyd-pandoc/src/engine/: mod.rs  state.rs
crates/tyd-pandoc/src/format/: docx.rs  html.rs  mod.rs  pandoc.rs  pdf.rs
crates/tyd-pandoc/src/plugin/: figure.rs  highlight.rs  hrule.rs  image.rs  linebreak.rs  mod.rs  smallcaps.rs  underline.rs
crates/tyd-render/: Cargo.toml
crates/tyd-render/src/: builtin.rs  context.rs  engine.rs  error.rs  lib.rs  object.rs  render.rs  table.rs  ty.rs  value.rs
crates/tyd-render/src/builtin/: bind.rs  list.rs  map.rs
crates/tyd-render/src/command/: argument.rs  mod.rs  signature.rs
crates/tyd-syntax/: Cargo.toml
crates/tyd-syntax/src/: ast.rs  code.rs  cst.rs  error.rs  inline.rs  kind.rs  lib.rs  line.rs  main.rs  node.rs  source.rs  token.rs  tree.rs  visitor.rs
crates/tyd-syntax/src/ast/: mod.rs  visitor.rs
crates/tyd-syntax/src/ast.bak/: mod.rs  visitor.rs
crates/tyd-syntax/src/cst/: fmt.rs  mod.rs
crates/tyd-syntax/src/cst.bak/: fmt.rs  mod.rs  terminal.rs
crates/tyd-syntax/src/lexer/: code.rs  error.rs  markup.rs  mod.rs  node.rs
crates/tyd-syntax/src/lexer.bak/: mod.rs  util.rs
crates/tyd-syntax/src/parser/: ast.rs  code.rs  combinator.rs  error.rs  ext.rs  extra.rs  markup.rs  mod.rs  visitor.rs
crates/tyd-util/: Cargo.toml
crates/tyd-util/src/: lib.rs
crates/tyd-vscode-extension/: CHANGELOG.md  package-lock.json  package.json
crates/tyd-zed-extension/: Cargo.toml  extension.toml
crates/tyd-zed-extension/languages/type-down/: config.toml
crates/tyd-zed-extension/src/: lib.rs
docs/: package.json
docs/.vitepress/: config.mts
docs/src/: index.md
docs/src/guide/: about.md  quickstart.md
docs/src/reference/: cli.md  code.md  enum.md  heading.md  inline.md  list.md  paragraph.md  raw.md  table.md  terms.md
examples/: .gitignore  code.tyd  format.tyd  impl.tyd  list.tyd  ok.tyd  raw.tyd  reference.tyd  table.tyd  test.tyd  text.tyd  wip.tyd
extension/: package-lock.json  package.json
extension/src/: extension.ts
src/: ast.rs  context.rs  error.rs  grammar_trait.rs  html.rs  ir.rs  lib.rs  main.rs  token.rs  type_down_grammar.rs
src/ast/: mod.rs  token.rs
src/compile/: docx.rs  html.rs  mod.rs  pandoc.rs  pdf.rs
src/cst/: fmt.rs  mod.rs  terminal.rs
src/parse/: ast.rs  mod.rs
src/parse/ast/: mod.rs  visitor.rs
src/parse/cst/: fmt.rs  mod.rs  terminal.rs
templates/: default.typst
