[workspace]
members = ["crates/*"]

[workspace.dependencies]
tyd-syntax = { path = "crates/tyd-syntax" }
tyd-doc = { path = "crates/tyd-doc" }
tyd-eval = { path = "crates/tyd-eval" }
tyd-pandoc = { path = "crates/tyd-pandoc" }
tyd-util = { path = "crates/tyd-util" }
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.5", features = ["fancy"] }
thiserror = "2.0"
ecow = "0.2"
derive_more = { version = "2", features = ["from"] }

[package]
name = "type_down"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Wehmoeller"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
miette.workspace = true
thiserror.workspace = true
tyd-syntax.workspace = true
tyd-eval.workspace = true
tyd-pandoc.workspace = true
