[package]
name = "tyd-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tyd-core.workspace = true
tyd-syntax.workspace = true
miette.workspace = true
thiserror.workspace = true
ecow.workspace = true
derive_more.workspace = true
pandoc_ast = "0.8.6"
pandoc = "0.8.11"
serde_json = "1.0"
