[package]
name = "tyd-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tyd-syntax.workspace = true
tyd-eval.workspace = true
ecow.workspace = true
tower-lsp = { version = "0.20.0", default-features = false, features = [
    "runtime-agnostic",
] }
async-std = "1.12.0"
dashmap = "5.5"
ropey = "1.6"
