[package]
name = "tyd-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tyd-core.workspace = true
tyd-syntax.workspace = true
tyd-eval.workspace = true
ecow.workspace = true
ropey.workspace = true
miette.workspace = true
tower-lsp = "0.20.0"
tokio = { version = "1.44", features = ["full"] }
dashmap = "5.5"
