[package]
name = "tyd-pandoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tyd-syntax = { path = "../tyd-syntax" }
tyd-eval = { path = "../tyd-eval" }
miette = "7.1.0"
thiserror = "1.0"
pandoc_ast = "0.8.6"
pandoc = "0.8.11"
ecow = "0.2.0"
