[package]
name = "tyd-pandoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tyd-syntax.workspace = true
tyd-eval.workspace = true
miette.workspace = true
thiserror.workspace = true
ecow.workspace = true
pandoc_ast = "0.8.6"
pandoc = "0.8.11"
