[package]
name = "tyd-pandoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tyd-syntax.workspace = true
tyd-doc.workspace = true
tyd-eval.workspace = true
miette.workspace = true
thiserror.workspace = true
ecow.workspace = true
pandoc = "0.8.11"
serde_json = "1.0"
