[package]
name = "tyd-syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tyd-core.workspace = true
miette.workspace = true
thiserror.workspace = true
ecow.workspace = true
chumsky = { version = "=1.0.0-alpha.8", features = ["nightly", "unstable"] }
constcat = "0.4.1"
